# AstralCompression

./: .flake8  .gitignore  CHANGELOG.md  FIXES_VERIFICATION.py  LICENSE  MCKAY_ASTRAL_INTEGRATION.md  PHASE3_SPACEPACKET_VERIFICATION.py  PHASE4_RS_VERIFICATION.py  PHASE5_TM_VERIFICATION.py  QUICK_REFERENCE.md  README.md  README_MCKAY_ASTRAL.md  c_benchmark.c  compress_text_demo.py  compress_video.py  compress_video_enhanced.py  flake8_report.txt  mckay_comprehensive_test.py  mckay_vs_standard.py  pyproject.toml  pyrightconfig.json  rust_vs_c_benchmark.py  rust_vs_python_benchmark.py  setup.cfg  test_fountain_status.py  test_mckay_fountain_corrected.py  test_mckay_fountain_integration.py  test_mckay_fountain_multitype.py  test_mckay_gist_first.py  test_voice_optimization.py  verify_core_fixes.py  verify_fixes.py
.github/workflows/: build_wheels.yml  ci.yml
astral/: __init__.py  bitstream.py  cli.py  codec.py  commands.py  container.py  crc.py  dict_update.py  fountain.py  grammar.py  mckay_astral_integration.py  mckay_usage_example.py  rs_fec.py  spacepacket.py  textpack.py  tmframe.py  varint.py  voice.py
astral_compress/: Cargo.toml  __init__.pyi  pyproject.toml
astral_compress/src/: lib.rs
examples/: cmd_point.json  detect.json  text.json
tests/: conftest.py  test_basic.py  test_codec.py  test_commands.py  test_comprehensive.py  test_container.py  test_fountain.py  test_grammar.py  test_mckay.py  test_rust_compress.py  test_rust_compress_old.py  test_textpack.py
