[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astral-compression"
version = "0.6.0"
description = "Extreme compression and loss-tolerant messaging for deep-space RF links"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tom Blanchard", email = "tomblanchard312@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
rs    = ["reedsolo>=1.7"]
voice = ["pycodec2>=4.0", "numpy>=1.24"]
fast = ["astral-compress>=0.1.0", "zstd>=1.5"]
all   = ["reedsolo>=1.7", "pycodec2>=4.0", "numpy>=1.24", "astral-compress>=0.1.0"]

[project.urls]
Homepage = "https://github.com/tomblanchard312/AstralCompression"
Repository = "https://github.com/tomblanchard312/AstralCompression"

[project.scripts]
astral = "astral.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
